--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>[a]nalyze [i]nternet | kernelcon 2024 badge</title>
+    <title>race condition | kernelcon 2025</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -66,26 +66,27 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">[a]nalyze [i]nternet badge</h3>
+      <h3 class="float-md-start mb-0">race condition badge</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="index.html">Home</a>
         <a class="nav-link fw-bold py-1 px-0" href="about.html">About</a>
         <a class="nav-link fw-bold py-1 px-0" href="ibom.html">Interactive BOM</a>
-        <a class="nav-link fw-bold py-1 px-0" href="activities.html">Activities</a>
+        <a class="nav-link fw-bold py-1 px-0" href="activities.html">Activity</a>
         <a class="nav-link fw-bold py-1 px-0" href="past_badges.html">Past Badges</a>
       </nav>
     </div>
+    <a class="btn btn-primary" href="https://leaderboard.kernelcon.org/" role="button">Leaderboard</a>
   </header>
 
   <main class="px-3">
     <img class="img-fluid" src="badge.png">
-    <p class="lead">this year's badge is a LAN cable tester!</p> 
-    <p class="lead">this site contains information about the badge, an interactive bill of materials (BOM), and activities for the hardware hacking village!</p>
-    <p class="lead">looking for instructions on how to remove the remote and make it reattachble? head on over to the <a href="activities.html">acitivtes page</a>.</p>
+    <p class="lead">this year's badge is a "buzz wire" game!</p> 
+    <p class="lead">how fast can you go? can you beat your friends? head to the badge village to upload your top scores and throw down a LIVE time!</p>
+    <p class="lead">this site contains information about the badge, an interactive bill of materials (BOM), and a <a href="activities.html">bonus track activity</a> for the hardware hacking village!</p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>kernelcon 2024 | built by zonksec</p>
+    <p>kernelcon 2025 | built by zonksec</p>
   </footer>
 </div>
   </body>
