--- a/past_badges.html
+++ b/past_badges.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>[a]nalyze [i]nternet badge | kernelcon 2024</title>
+    <title>race condition | kernelcon 2025</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -66,15 +66,16 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">[a]nalyze [i]nternet badge</h3>
+      <h3 class="float-md-start mb-0">race condition badge</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="index.html">Home</a>
         <a class="nav-link fw-bold py-1 px-0" href="about.html">About</a>
         <a class="nav-link fw-bold py-1 px-0" href="ibom.html">Interactive BOM</a>
-        <a class="nav-link fw-bold py-1 px-0" href="activities.html">Activities</a>
+        <a class="nav-link fw-bold py-1 px-0" href="activities.html">Activity</a>
         <a class="nav-link fw-bold py-1 px-0 active" href="past_badges.html">Past Badges</a>
       </nav>
     </div>
+    <a class="btn btn-primary" href="https://leaderboard.kernelcon.org/" role="button">Leaderboard</a>
   </header>
 
     <main class="px-3">
@@ -88,10 +89,12 @@
       <p>https://github.com/ZonkSec/kernelcon-2022-badge</p>
       <h3>2023 - 1337 kHz Radio</h3>
       <p>https://2023.badge.kernelcon.org/</p>
+      <h3>2024 - [a]nalyze [i]nternet</h3>
+      <p>https://2024.badge.kernelcon.org/</p>
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>kernelcon 2024 | zonksec</p>
+      <p>kernelcon 2025 | zonksec</p>
     </footer>
   </div>
 </body>
