--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a class="nav-link fw-bold py-1 px-0" href="past_badges.html">Past Badges</a>
       </nav>
     </div>
-    <a class="btn btn-primary" href="https://leaderboard.kernelcon.org/" role="button">Leaderboard</a>
+    <a class="btn btn-primary" href="final_badge_data_export.json" role="button">Leaderboard</a>
   </header>
 
   <main class="px-3">
@@ -83,6 +83,8 @@
     <p class="lead">this year's badge is a "buzz wire" game!</p> 
     <p class="lead">how fast can you go? can you beat your friends? head to the badge village to upload your top scores and throw down a LIVE time!</p>
     <p class="lead">this site contains information about the badge, an interactive bill of materials (BOM), and a <a href="activities.html">bonus track activity</a> for the hardware hacking village!</p>
+    <p class="lead">Source code released 4/4/25: <a href="https://github.com/ZonkSec/kernelcon-2025-badge">https://github.com/ZonkSec/kernelcon-2025-badge</a></p>
+    <p class="lead">Leaderboard has been torn down. Button now links to raw data export.</a></p>
   </main>
 
   <footer class="mt-auto text-white-50">
