--- a/past_badges.html
+++ b/past_badges.html
@@ -75,7 +75,7 @@
         <a class="nav-link fw-bold py-1 px-0 active" href="past_badges.html">Past Badges</a>
       </nav>
     </div>
-    <a class="btn btn-primary" href="https://leaderboard.kernelcon.org/" role="button">Leaderboard</a>
+    <a class="btn btn-primary" href="final_badge_data_export.json" role="button">Leaderboard</a>
   </header>
 
     <main class="px-3">
